WindGroup Dev/src/objects/Event_Promotion__c.object
<CustomObject>
    <fields>
        <fullName>App_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>App Setting</label>
        <referenceTo>App_Setting__c</referenceTo>
        <relationshipLabel>Event &amp; Promotion</relationshipLabel>
        <relationshipName>Event_Promotion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Image_Promotion__c</fullName>
        <formula>IF( ISBLANK(  URL_Image_Promotion__c  ) ,&quot;&quot;, IMAGE(URL_Image_Promotion__c , &quot;Icon&quot;, 100,100) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Promotion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Event &amp; Promotion</relationshipLabel>
        <relationshipName>Event_Promotion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Image_Promotion__c</fullName>
        <label>URL Image Promotion</label>
        <type>Url</type>
    </fields>
    <label>Event &amp; Promotion</label>
    <nameField>
        <label>Event &amp; Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event &amp; Promotion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>